# code-rag

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  architecture.md  caravan.yaml  code-rag-mcp.md  development_log.md  development_plan.md  docker-compose-ingest.yaml  docker-compose.yaml  env-sample  mcp_plan.md
.github/workflows/: build-check.yml  gh-pages.yml  release.yml
config/: targets.json
crates/code-rag-core/: Cargo.toml
crates/code-rag-core/src/: dto.rs  errors.rs  lib.rs  retriever.rs  state.rs
crates/code-rag-engine/: Cargo.toml
crates/code-rag-engine/src/: comparison.rs  config.rs  context.rs  file.rs  folder.rs  fusion.rs  graph.rs  intent.rs  lib.rs  retriever.rs
crates/code-rag-engine/src/text/: bm25.rs  idf.rs  mod.rs  searchable.rs  tokenize.rs
crates/code-rag-engine/tests/: text.rs
crates/code-rag-llm/: Cargo.toml
crates/code-rag-llm/src/: lib.rs  rig_gemini.rs
crates/code-rag-mcp/: Cargo.toml  README.md
crates/code-rag-mcp/skills/: code-rag.md
crates/code-rag-mcp/src/: main.rs
crates/code-rag-store/: Cargo.toml
crates/code-rag-store/src/: embedder.rs  lib.rs  reranker.rs  seams.rs  vector_store.rs
crates/code-rag-types/: Cargo.toml
crates/code-rag-types/src/: lib.rs
crates/code-rag-ui/: Cargo.toml  index.html
crates/code-rag-ui/src/: api.rs  auth.rs  data.rs  embedder.rs  gemini.rs  main.rs  reranker.rs  search.rs  standalone_api.rs  text_search.rs
crates/code-rag-ui/src/components/: auth_panel.rs  chat_view.rs  intent_badge.rs  mod.rs  sources_panel.rs
crates/code-rag-ui/static/: embedder.js  reranker.js
crates/code-rag-ui/style/: main.css
crates/code-raptor/: Cargo.toml
crates/code-raptor/src/: edge_resolution.rs  export.rs  lib.rs  main.rs  orchestrate.rs
crates/code-raptor/src/ingestion/: file.rs  folder.rs  language.rs  mod.rs  parser.rs  reconcile.rs
crates/code-raptor/src/ingestion/languages/: go.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/code-raptor/tests/: incremental_ingestion.rs
data/reports/: b5_composite_fa45b93.md  baseline_51e6de5.json  baseline_51e6de5.md  baseline_gt_51e6de5.json  baseline_gt_51e6de5.md  c2_sota_full_5aa63f2.md  c2_v3_full_5aa63f2.md  c3_post2_ee22398.md  c3_post3_ee22398.md  c3_post4_ee22398.md  c3_post5_ee22398.md  c3_post6_ee22398.md  c3_post7_ee22398.md  c3_post8_ee22398.md  c3_post_ee22398.md  debug5_dc6510c.md  debug_dc6510c.md  diag_2c294a9.md  diag_hybrid_only_2c294a9.md  post_a1_214d847.md  post_a2_bd57b33.md  post_a2_gt_bd57b33.md  post_a3_v2_f82b0fb.md  post_a3_v2_hero_f82b0fb.md  post_a4_fresh_a02b170.md  post_b1_eb295c2.json  post_b1_eb295c2.md  post_b1_gated_eb295c2.json  post_b1_gated_eb295c2.md  post_b1_no_rerank_eb295c2.json  post_b1_no_rerank_eb295c2.md  post_b2_2c294a9.md  post_b2_gt_2c294a9.md  post_b2_stopwords_2c294a9.md  post_b3_dual_gate_b263f8d.md  post_b3_dual_gate_gt_b263f8d.md  post_b3_dual_gate_v2_b263f8d.md  post_b3_full_ug_b263f8d.md  post_b3_hybrid_only_ug_b263f8d.md  post_b3_rerank_ug_b263f8d.md  (+21 more)
dockerfile/: Dockerfile
docs/: caravan-readiness.md  executive_summary.md  pre-change-state.md  release.md  technical_summary.md
src/: lib.rs  main.rs  models.rs
src/api/: dto.rs  error.rs  handlers.rs  mod.rs  state.rs
src/engine/: generator.rs  mod.rs  retriever.rs
src/harness/: dataset.rs  matching.rs  metrics.rs  mod.rs  report.rs  runner.rs
src/store/: mod.rs
templates/: chat.html
