[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Caravan RPC SDK — path-dep until Phase 2 close, then a real version pin.
# See ../caravan/docs/development_plan.md milestone B0p.
caravan-rpc = { path = "../caravan/rpc/rust/caravan-rpc" }

[package]
name = "code-rag-chat"
version = "0.1.0"
authors = ["paulxiep"]
edition = "2024"

[[bin]]
name = "code-rag-chat"
path = "src/main.rs"

[[bin]]
name = "code-rag-harness"
path = "src/bin/harness.rs"

[dependencies]
code-rag-types = { path = "crates/code-rag-types" }
code-rag-engine = { path = "crates/code-rag-engine" }
code-rag-store = { path = "crates/code-rag-store" }
caravan-rpc = { workspace = true }
async-trait = "0.1"

# LLM
rig-core = "0.27"

# Web
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Async
tokio = { version = "1.48", features = ["full"] }
futures = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

# Config
dotenvy = "0.15"


[dev-dependencies]
tempfile = "3.13"
