[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Caravan RPC SDK — published to crates.io at M9 Phase 1 close (2026-05-21).
# Was a sibling path-dep through M5 (the local caravan/ next to code-rag/);
# the published pin removes that CI gotcha so gh-pages + release workflows
# resolve the dep from a single-repo checkout.
caravan-rpc = "0.1.0"

[package]
name = "code-rag-chat"
version = "0.1.0"
authors = ["paulxiep"]
edition = "2024"

[[bin]]
name = "code-rag-chat"
path = "src/main.rs"

[[bin]]
name = "code-rag-harness"
path = "src/bin/harness.rs"

[dependencies]
code-rag-types = { path = "crates/code-rag-types" }
code-rag-engine = { path = "crates/code-rag-engine" }
code-rag-store = { path = "crates/code-rag-store" }
# M5: LLM impls + chat-side core (AppState, retrieve, EngineError, SourceInfo)
# live in their own library crates so a Caravan synthetic peer can build
# against them (peers can't link the host binary). The MCP server crate
# depends on `code-rag-core` directly, breaking its transitive dep on
# `code-rag-chat`.
code-rag-llm = { path = "crates/code-rag-llm" }
code-rag-core = { path = "crates/code-rag-core" }
caravan-rpc = { workspace = true }
async-trait = "0.1"

# (M5) `rig-core` dependency dropped — moved with RigGeminiImpl to
# `code-rag-llm`. The chat binary reaches it transitively now.

# Web
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Async
tokio = { version = "1.48", features = ["full"] }
futures = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

# Config
dotenvy = "0.15"


[dev-dependencies]
tempfile = "3.13"
