[package]
name = "code-rag-mcp"
version = "0.1.0"
authors = ["paulxiep"]
edition = "2024"

[[bin]]
name = "code-rag-mcp"
path = "src/main.rs"

[dependencies]
# MCP SDK — official, features enable stdio server + tool macros
rmcp = { version = "1.5", features = ["server", "macros", "transport-io", "schemars"] }

# Retrieval brain — reuse the chat server's AppState + retriever wrapper rather
# than duplicating 746 lines of orchestration. Future cleanup: extract the
# shared native retrieve() into its own library crate so the MCP crate doesn't
# transitively depend on the chat server's HTTP plumbing.
code-rag-chat = { path = "../.." }
code-rag-engine = { path = "../code-rag-engine" }
code-rag-store = { path = "../code-rag-store" }
code-rag-types = { path = "../code-rag-types" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization — rmcp tool params require JsonSchema
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging — MUST route to stderr because stdout is the MCP protocol channel
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
