[package]
name = "code-rag-store"
version = "0.1.0"
authors = ["paulxiep"]
edition = "2024"

[dependencies]
code-rag-types = { path = "../code-rag-types" }
code-rag-engine = { path = "../code-rag-engine" }
caravan-rpc = { workspace = true }
async-trait = "0.1"

# Embeddings
fastembed = "5.5"
hf-hub = { version = "0.4", features = ["native-tls"] }

# Storage
lancedb = "0.23"
arrow-array = "56.2"
arrow-schema = "56.2"
arrow-buffer = "56.2"

# Async
tokio = { version = "1.48", features = ["full"] }
futures = "0.3.31"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serde — required by Caravan-RPC for seam-trait error wire serialization (pre-M2).
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.13"
serde_json = "1.0"
