[package]
name = "code-rag-ui"
version = "0.1.0"
edition = "2024"

[features]
default = []
standalone = ["dep:code-rag-engine", "dep:code-rag-types"]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlTextAreaElement", "HtmlInputElement", "KeyboardEvent",
    "ScrollBehavior", "ScrollIntoViewOptions",
    "Document", "Element",
    # standalone feature needs these for OAuth2 + crypto
    "Crypto", "SubtleCrypto", "Window", "Location",
    "History", "UrlSearchParams", "Storage",
    "console",
] }
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
uuid = { version = "1.20", features = ["js"] }

# standalone-only deps (activated by feature flag)
code-rag-engine = { path = "../code-rag-engine", optional = true }
code-rag-types = { path = "../code-rag-types", optional = true }
