[package]
name = "code-raptor"
version = "0.1.0"
authors = ["paulxiep"]
edition = "2024"

[dependencies]
code-rag-types = { path = "../code-rag-types" }
code-rag-engine = { path = "../code-rag-engine" }
code-rag-store = { path = "../code-rag-store" }

# Parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"
toml = "0.8"
walkdir = "2.5"

# Arrow / LanceDB (for export)
arrow-array = "56.2"
arrow-buffer = "56.2"
lancedb = "0.23"
futures = "0.3.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
tokio = { version = "1.48", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.13"
